# software

./: .gitmodules  .travis.yml
trident/: catkin.options  dependencies.rosinstall
trident/src/auvic_tests/: CMakeLists.txt  package.xml
trident/src/communication/monitor/: CMakeLists.txt  package.xml
trident/src/communication/monitor/include/: can_manager.hpp
trident/src/communication/monitor/src/: can_manager.cpp
trident/src/communication/monitor/test/: from_can_manager.test  from_can_manager_test.cpp  initialize_vcan.sh  main_test.launch  test_receiving.cpp  to_can_manager.test  to_can_manager_test.cpp
tutorials/continuous_integration/: .travis.yml
